--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
             <div>
                 Designer & Developer : <a href = "https://github.com/Hans774882968/" target = "_blank">hans774882968</a>
             </div>
-            <div class = "server-info">
-                Total 0.000000(s) query 0, Server time : 2020-08-18 17:15:24, Gzip enabled
-            </div>
+            <div id = "server-info"></div>
         </div>
         <div class = "right-links">
             <a href = "http://acm.hdu.edu.cn/admin" target = "_blank">Administration</a>
